--- a/main.css
+++ b/main.css
@@ -9,6 +9,46 @@ html {
 
     body {
         background-color: #adadad;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+
+    }
+
+    .timeline {
+        position: relative;
+        max-width: 100%;
+        margin: 0;
+    }
+
+    .timeline::after {
+        content: '';
+        position: absolute;
+        width: 7px;
+        background-color: #02628B;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        margin-left: -4px;
+   
+    }
+
+    .info {
+        padding: 10px 40px;
+        position: relative;
+        background-color: #fff;
+        width: 50%;
     }
 
     
+    
+
+
+
+    
+
+    
+
+
+
+
+
+   
