line with points

--- a/main.css
+++ b/main.css
@@ -15,8 +15,8 @@ html {
 
     .timeline {
         position: relative;
-        max-width: 100%;
-        margin: 0;
+        max-width: 1200px;
+        margin: 0 auto;
     }
 
     .timeline::after {
@@ -27,14 +27,13 @@ html {
         top: 0;
         bottom: 0;
         left: 50%;
-        margin-left: -4px;
+        margin-left: 33px;
    
     }
 
     .container {
         padding: 10px 40px;
         position: relative;
-        background-color: #fff;
         width: 50%;
     }
 
@@ -46,7 +45,9 @@ html {
         right: -17px;
         background-color: #026289;
         border: 4px solid #fff;
+        top: 15px;
         border-radius: 50%;
+        z-index: 1;
 
     }
 
@@ -58,7 +59,49 @@ html {
         left: 50%
     }
 
-    
+    .left ::before {
+        content: "";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        right: 30px;
+        border: medium solid #026289;
+        border-width: 10px 0 10px 10px;
+        border-color: transparent transparent transparent #fff;
+
+    }
+
+    .right::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        left: 30px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+      }
+
+      .right::after {
+        left: -16px;
+      }
+
+      .info {
+        padding: 20px 30px;
+        background-color: #fff000;
+        position: relative;
+        border-radius: 6px;
+        
+      }
+
+
+
+
+
 
     
 
